--- a/styles.css
+++ b/styles.css
@@ -1,57 +1,20 @@
-
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: black;
-    color: white;
-    margin: 0;
-  }
-  
-  h1 {
+body {
+    font-family: Arial, sans-serif;
     text-align: center;
-    margin-bottom: 50px;
-  }
-  
-  #clock-container {
-    margin-bottom: 50px;
-  }
-  
-  #time {
-    font-family: "Arial", sans-serif;
-    font-size: 10rem;
-    text-align: center;
-    padding: 40px;
-    background-color: black;
-    border-radius: 20px;
-    color: white;
-    display: inline-block;
-  }
-  
-  #image-container {
-    position: relative;
-    margin-bottom: 50px;
-  }
-  
-  #img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 120px;
-    width: 160px;
     margin-top: 100px;
-  }
-  
-  #controls {
-    text-align: center;
-  }
-  
-  button {
-    margin: 5px;
+    background-color: #f0f0f0;
+}
+
+button {
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
-    margin-top: 250px;
-  }
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
